[tool.poetry]
name = "twrpdtgen"
version = "2.3.0"
description = "A Python library/script to automatically generate TWRP-compatible device tree from a boot/recovery image"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/1064326656/twrpdtgen/blob/master/boot.img"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.27"
Jinja2 = "^3.1.1"
sebaubuntu-libs = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
